# NMAP-AI

./: .coverage  .gitignore  README.md  hard_model_standalone.py  manual_api_test_P1.py  pyproject.toml  pytest.ini  quick_kg_test.py  requirements-dev.txt  requirements.txt  standalone_generator_test.py  test_P1.py  test_hard_api.py  test_kg_standalone.py  test_p2.py  test_p4_simulation.py  verify_setup.py
.github/workflows/: ci.yml
agents/: __init__.py
agents/comprehension/: __init__.py  classifier.py  init_kg.py  kg_utils.py
agents/easy_medium/: kg_rag.py  t5_generator.py  test_generator.py  test_step1.py
agents/hard/: Download_model.py  __init__.py  t5_generator.py
agents/validator/: __init__.py  conflict_checker.py  decision.py  safety_checker.py  self_correct.py  syntax_checker.py  validator.py  vm_sim.py
api/: __init__.py  main.py
api/routers/: __init__.py  api.py  comprehend.py  nmap_ai.py
artifacts/: complexity_model.pkl  tfidf.pkl
data/: nl_nmap_pairs.jsonl
data/kg/: init.cypher
demo/: gradio_app.py
docker/: Dockerfile  Dockerfile.gradio  docker-compose.yml
docs/: API.md  P1_P4_INTEGRATION_REPORT.md
knowledge_graph/: advanced_postprocessor.py  final_nmap_pipeline.py  nmap_dataset_enriched.json  populate_knowledge_graph.py
notebooks/: T5.ipynb  hard-model-training_T5.ipynb
scripts/: analyze_dataset.py  benchmark.py  demo_person1.py  init_neo4j.py  train_classifier.py
tests/: __init__.py  conftest.py  test_comprehension.py  test_integration.py  test_neo4j.py  test_neo4j_integration.py  test_p1_p4_integration.py  test_validator.py
(+97 files in other folders)
