[project]
name = "nmap-ai"
version = "0.1.0"
description = "AI-powered network mapping analysis"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.4.0",
    "neo4j>=5.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "scikit-learn>=1.3.0",
    "gradio>=3.40.0",
    "pytest>=7.4.0",
    # Add other dependencies here
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"